$Id$

*** Note: Please add new entries to the top of this file. ***
-------------------------------------------------------------------------------

- added firewall support for decapsulated IPsec packets (new pseudo-interface
  "IPsec" in firewall rule editor); this is on by default, but the default
  configuration contains a "pass all" rule on the new IPsec pseudo-
  interface (and this is also added automatically for existing configurations),
  which can then be deleted to actually filter IPsec VPN traffic

- stop discriminating against nge(4) (National Semiconductor PCI Gigabit Ethernet) adapters

- updated FreeBSD to 6.2-RELEASE-p9

- updated ipfilter to 4.1.28


1.3b5
-----

- automatically change sisX interface names to vrX when running on ALIX

- add vr(4) driver VLAN fix (for ALIX etc.)

- added reset button driver for ALIX

- change logo/license/footer to include registered trademark sign

- upgraded ipfilter to 4.1.23 (from FreeBSD CVS); note: kernel patch
  in build/patches/kernel/kernel-6.patch still reflects ipfilter
  changes to stock 4.1.13

- fix FIN handling in ipnat FTP proxy

- siproxd added. Offers transparent SIP proxy/masquerading and simple
  registrar service. See http://siproxd.sourceforge.net/

1.3b4
-----

- console speed for WRAP image is now 38400 as this has always been the
  default for new WRAP (and ALIX) boards anyway

- modified WRAP image kernel to also work with ALIX.2 (added vr device and
  USB EHCI + CPU soft reset patches to wrap kernel; tested on prototype board)
  -> for ALIX, interfaces need to be re-assigned (vr* instead of sis*)

- patched hostapd to support writing PID file; start hostapd with -B
  flag (fixes problem with wireless interfaces that have WPA enabled
  not being initialized properly on boot)

- recompiled MPD with current MSS/dial-on-demand patches (also fixes idle timeout bug)

- removed code that auto-selects subnet mask on LAN and OPT setup
  pages (it's confusing and doesn't necessarily get it right)
